ordem execução do do checked

--- a/life-cycle/src/app/app.component.html
+++ b/life-cycle/src/app/app.component.html
@@ -480,5 +480,5 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
+<app-check-sample></app-check-sample>
 <router-outlet></router-outlet>
