sub modulos na pratica

--- a/Diretivas/diretivas-proj/src/app/app.component.html
+++ b/Diretivas/diretivas-proj/src/app/app.component.html
@@ -5,5 +5,7 @@
 <ng-template #elseBlock>
     <p>Olá sou um bloco condicional que só sou exibido se alguma condição for atendida!</p>
 </ng-template>
+<app-input></app-input>
+<app-list-view></app-list-view>
 
 <router-outlet></router-outlet>
