--- a/store/src/app/pages/home/home.component.html
+++ b/store/src/app/pages/home/home.component.html
@@ -1,3 +1,25 @@
 <div class="home__container">
-    <app-card></app-card>
+    <app-card
+        gameCover="assets/bt-1.jpg"
+        gameLabel="DIGITAL"
+        gameType="DIGITAL | PS4"
+    >
+
+    </app-card>
+    <app-card
+        gameCover="assets/ac-cover.jpg"
+        gameLabel="BEST OF THE YEAR"
+        gameType="DISC | PS5"
+        gamePrice="269,99"
+    >
+
+    </app-card>
+    <app-card
+        gameCover="assets/bt-hardline.jpg"
+        gameLabel="DIGITAL"
+        gameType="DIGITAL | PS5"
+        gamePrice="369,99"
+    >
+
+    </app-card>
 </div>
